fixes #17; no more stuck in nav when click on blog link

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1692,15 +1692,11 @@ section.event .category_svg {
 }
 
 .blur-img {
-  z-index: 999;
-  min-height: 180px;
   overflow: hidden;
   background: url(/img/loading.svg) no-repeat center;
-  margin: auto 0;
 }
 
 img.lazy {
-  max-width: 100%;
   filter: blur(25px) !important;
 }
 
