--- a/public/css/views/article.scss
+++ b/public/css/views/article.scss
@@ -36,14 +36,10 @@
 }
 
 .blur-img {
-  min-height:180px;
   overflow: hidden;
   background: url(/img/loading.svg) no-repeat center;
-  margin: auto 0;
 }
 
 img.lazy {
-  max-width:100% ;
   filter: blur(25px)!important;
-  //opacity: 0.9;
 }
